# funstruct

./: .gitignore  .pre-commit-config.yaml  .vimspector.json  LICENSE  README.md  justfile  pyproject.toml  pytest.ini  tox.ini
_funstruct/: cons.py  frozendict.py  tailrec.py
docs/: conf.py  index.rst
funstruct/: __init__.py  cons.py  decorators.py  frozendict.py  tailrec.py
tests/: test_cons.py  test_frozendict.py  test_tailrec.py
tests/decorators/: test_tail_call.py  test_tailrec.py
